// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEditSettingsScreen component should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <ErrorText
    text=""
  />
  <ProjectEditSettingsForm
    description="Test"
    isLoading={false}
    name="Test"
    onSave={[Function]}
  />
</View>
`;

exports[`ProjectEditSettingsScreen component should render w/o a description 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <ErrorText
    text=""
  />
  <ProjectEditSettingsForm
    description=""
    isLoading={false}
    name="Test"
    onSave={[Function]}
  />
</View>
`;

exports[`ProjectEditSettingsScreen function tests should return the screen tracking info 1`] = `
Object {
  "name": "build:app:more:projects:details:editsettings",
}
`;
